# agency

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  PROMPT.md  README.md  agency.jsonc  groups.jsonc
.github/workflows/: release.yml
_agents/: backend-engineer.jsonc  code-reviewer.jsonc  frontend-engineer.jsonc  orchestrator.jsonc  planner.jsonc  rust-engineer.jsonc
_templates/: backend-api.jsonc  debugging.jsonc  frontend-ui.jsonc  fullstack-builders.jsonc  general-purpose.jsonc  lang-go.jsonc  lang-rust.jsonc  lang-specialized.jsonc  lang-typescript.jsonc  orchestration.jsonc  planning.jsonc  quality-security.jsonc  research-knowledge.jsonc  unrestricted.jsonc  vcs-permissions.jsonc
schemas/: agent.json  template.json
src/: can.rs  comment_gen.rs  config.rs  generator.rs  jsonc.rs  jsonc_writer.rs  lib.rs  loader.rs  main.rs  models.rs  reporter.rs  resolver.rs  sot_generator.rs  template_dag.rs  validator.rs
