[package]
name = "opencode-agency"
version = "0.1.0"
edition = "2021"

[lib]
name = "opencode_agency"
path = "src/lib.rs"

[[bin]]
name = "agency"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.29", features = ["cst", "serde"] }
anyhow = "1"
bincode = "1"
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.6"

[dev-dependencies]
tempfile = "3"
